# FormicOS

./: .dockerignore  .env.example  .gitignore  .tmp_inspect_db.py  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL_TERMS.md  CONTRIBUTING.md  CORPORATE_CLA.md  Caddyfile  Dockerfile  Dockerfile.mcp-gateway  Dockerfile.sandbox  FINDINGS.md  GOVERNANCE.md  LICENSE  METERING.md  Prompt-Zero.txt  QUICKSTART.md  README.md  SECURITY.md  cloud_context.txt  dashboard.html  docker-compose.https.yml  docker-compose.local-swarm.yml  docker-compose.yml  formicos-cli.py  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
.obsidian/: workspace.json
addons/: README.md
addons/TEMPLATE/: addon.yaml
addons/codebase-index/: addon.yaml
addons/colony/: addon.yaml
addons/docs-index/: addon.yaml
addons/git-control/: addon.yaml
config/: capability_profiles.json  caste_recipes.yaml  experimentable_params.yaml  formicos.yaml  qwen35-chat.jinja  sandbox_profiles.yaml  seccomp-sandbox.json
config/prompts/: cfo.md  (+9 more)
docker/: sandbox.Dockerfile
docs/: A2A_ECONOMICS.md  API_SURFACE_INTEGRATION_REFERENCE.md  ARCHITECTURE.md  AUTONOMOUS_OPERATIONS.md  CONTRIBUTOR_PAYOUT_OPS.md  DEPLOYMENT.md  DEVELOPER_BRIDGE.md  DEVELOPMENT_WORKFLOW.md  FormicOS_Best_Form_Audit_and_Walkthrough.md  FormicOS_Context_Agnostic_Description.md  GITHUB_ADMIN_SETUP.md  KNOWLEDGE_LIFECYCLE.md  KNOWLEDGE_PIPELINE_REFERENCE.md  LOCAL_FIRST_QUICKSTART.md  OPERATORS_GUIDE.md  PLANNING_WORKBENCH.md  README.md  REPLAY_SAFETY.md  RUNBOOK.md
frontend/: CHANGELOG.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: attribution.py  bootstrap_hierarchy.py  build_llm_image.sh  compile_context.py  count_loc.py  eval_humaneval.py  generate_aider_tasks.py  import_humaneval.py  lint_imports.py  mcp_gateway.py  mcp_puppeteer_inside.py  mcp_puppeteer_test.py  mcp_puppeteer_ui_test.py  mcp_puppeteer_ui_test2.py  migrate_lancedb_to_qdrant.py  migrate_skill_bank_v2.py  migrate_v05_to_v06.py  migrate_v06_to_v07.py  setup-local-gpu.sh  setup-local-swarm.sh  setup_local_devstral.py  ui_smoke_test.mjs
src/: __init__.py  __main__.py  agents.py  approval.py  archivist.py  audit.py  auth.py  colony_manager.py  context.py  governance.py  llm_client.py  mcp_client.py  model_registry.py  models.py  orchestrator.py  rag.py  router.py  server.py  session.py  skill_bank.py  stigmergy.py  webhook.py  worker.py
tests/: conftest.py  smoke_test.py  smoke_wave54.py  smoke_wave54_quality.py  test_agents.py  test_approval.py  test_archivist.py  test_ast_validator.py  test_audit.py  test_cfo.py  test_colony_manager.py  test_context.py  test_contract_parity_v2.py  test_dockling_parser.py  test_egress_proxy.py  test_external_gateway.py  test_governance.py  test_inbound_mcp.py  test_integration.py  test_mcp.py  test_model_registry.py  test_models.py  test_orchestrator.py  test_rag.py  test_repl_telemetry.py  test_router.py  test_server.py  test_session.py  test_skill_bank.py  test_v062.py  test_v070_api.py  test_v070_contracts.py  test_v070_migration.py  test_v070_wiring.py  test_v073_budget.py  test_v073_circuit_breaker.py  test_v073_errors.py  test_v073_metrics.py  test_v073_webhook.py  test_v074_auth.py  (+13 more)
(+1274 files in other folders)
