[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formicos"
version = "0.9.0"
description = "Formic-OS — Colony Operating System for multi-agent AI swarms"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.12.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "numpy>=1.26.0",
    "sentence-transformers>=2.5.0",
    "tenacity>=8.2.0",
    "json-repair>=0.25.0",
    "jsonlines>=4.0.0",
    "watchdog>=4.0.0",
    "qdrant-client>=1.15.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.20.0"]
fast = ["orjson>=3.9.0"]

[project.scripts]
formicos = "src.__main__:main"

[tool.setuptools]
packages = [
    "src",
    "src.web",
    "src.api",
    "src.api.routes",
    "src.core",
    "src.core.network",
    "src.core.ingestion",
    "src.core.repl",
    "src.core.orchestrator",
    "src.mcp",
    "src.services",
    "src.services.ingestion",
]

[tool.setuptools.package-dir]
src = "src"
"src.web" = "src/web"

[tool.setuptools.package-data]
src = ["web/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
