[project]
name = "formicos"
version = "2.0.0a1"
description = "Stigmergic multi-agent colony framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10,<3.0",
    "httpx>=0.28,<1.0",
    "aiosqlite>=0.22,<1.0",
    "sentence-transformers>=5.3,<6.0",
    "fastmcp>=3.0,<4.0",
    "starlette>=0.46,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pyyaml>=6.0,<7.0",
    "structlog>=25.1,<26.0",
    "sse-starlette>=2.0,<3.0",
    "opentelemetry-api>=1.25,<2.0",
    "qdrant-client>=1.16,<2.0",
    "json-repair>=0.30,<1.0",
    "detect-secrets>=1.5,<2.0",
    "trafilatura>=2.0,<3.0",
    "readability-lxml>=0.8,<1.0",
]

[project.optional-dependencies]
otel-export = [
    "opentelemetry-sdk>=1.25,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25,<2.0",
]
dev = [
    "pytest>=8.2,<10.0",
    "pytest-asyncio>=1.0,<2.0",
    "pytest-bdd>=8.0,<9.0",
    "pytest-cov>=6.0,<8.0",
    "pyright>=1.1.390,<2.0",
    "ruff>=0.14,<1.0",
]

[project.scripts]
formicos = "formicos.surface.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/formicos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
# Pydantic models and Protocol-implementing classes need runtime type access
"src/formicos/core/types.py" = ["TCH001", "TCH003"]
"src/formicos/core/events.py" = ["TCH003"]
"src/formicos/core/settings.py" = ["TCH001"]
"src/formicos/adapters/*.py" = ["TCH001", "TCH003"]
"src/formicos/engine/**/*.py" = ["TCH001", "TCH003"]
"src/formicos/surface/*.py" = ["TCH001", "TCH003"]

[tool.ruff.lint.isort]
known-first-party = ["formicos"]
